# assembler

./: .gitignore  main.ipynb  pyproject.toml  repeat-collision.ipynb
.ipynb_checkpoints/: main-checkpoint.ipynb  repeat-collision-checkpoint.ipynb
stuff/: 1000-sequence.txt  aistuff.py  m1000.txt
