[project]
name = "maths"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "simple-websocket>=1.1.0",
]
